--- a/分布式并行运算/MapReduce案例/统计单词，按文件分.md
+++ b/分布式并行运算/MapReduce案例/统计单词，按文件分.md
@@ -31,7 +31,8 @@ public class reIndex {
   
         @Override  
         // (单词: 文件名) : 1  
-        protected void map(Object key, Text value, Context context) throws IOException, InterruptedException {  
+        protected void map(Object key, Text value, Context context) 
+	        throws IOException, InterruptedException {  
             split = (FileSplit) context.getInputSplit();   // 获取当前切片  
             StringTokenizer itr = new StringTokenizer(value.toString());  
             while (itr.hasMoreTokens()) {  
@@ -43,12 +44,13 @@ public class reIndex {
         }  
     }  
   
-    // 汇总文件中单词数   (word:file) : count   =>   word : (file:sum(count))    public static class Combine extends Reducer<Text, Text, Text, Text> {  
+    // 汇总文件中单词数   (word:file) : count   =>   word : (file:sum(count))    
+    public static class Combine extends Reducer<Text, Text, Text, Text> {  
         private Text info = new Text();  
   
         @Override  
         protected void reduce(Text key, Iterable<Text> values,  
-                              Context context) throws IOException, InterruptedException {  
+			Context context) throws IOException, InterruptedException {  
             int count = 0;  
             for (Text value : values) {  
                 if (StringUtils.isNumeric(value.toString())) {  
@@ -63,7 +65,8 @@ public class reIndex {
         }  
     }  
   
-    // 汇总  word : (file:count)   =>  word : (file1:count1 file2:count2)    public static class ReduceTask extends Reducer<Text, Text, Text, Text> {  
+    // 汇总  word : (file:count)   =>  word : (file1:count1 file2:count2)    
+    public static class ReduceTask extends Reducer<Text, Text, Text, Text> {  
         private Text result = new Text();  
   
         @Override  
@@ -79,7 +82,8 @@ public class reIndex {
         }  
     }  
   
-    public static void main(String[] args) throws IOException, InterruptedException, ClassNotFoundException {  
+    public static void main(String[] args) 
+	    throws IOException, InterruptedException, ClassNotFoundException {  
         System.setProperty("HADOOP_USER_NAME", "root");  
         Configuration conf = new Configuration();  
         conf.set("fs.defaultFS", "hdfs://master:9000");  
