--- a/奶奶滴/大数据/scala/函数式编程.md
+++ b/奶奶滴/大数据/scala/函数式编程.md
@@ -98,24 +98,36 @@ func(1, 2)(_ - _)   // 减法
 
 ### 偏应用函数
 
-偏应用函数是一种表达式，不需要提供函数需要的所有参数，只需要提供部分，或不提供所需参数
+偏应用函数（部分参数函数）是一种表达式，不需要提供函数需要的所有参数，只需要提供部分，或不提供所需参数
+
+快速定义
+
+```scala
+ val pf: PartialFunction[Int, String] = {   // [参数类型， 返回值类型]
+   case i if i%2 == 0 => "even"
+ }
+```
+
+应用
 
 ```scala
 def main(args: Array[String]) {
   val date = new Date
-  val logWithDateBound = log(date, _ : String) 
+  val logWith = log(date, _ : String) // 偏函数  如果是 log _ 则为提供所有参数
 
-  logWithDateBound("message1" )   // 此时的参数是用于填充 _ 
+  logWith("message1" )   // 此时的参数是用于填充 _ 
   Thread.sleep(1000)
-  logWithDateBound("message2" )
+  logWith("message2" )
   Thread.sleep(1000)
-  logWithDateBound("message3" )
+  logWith("message3" )
 }
 
 def log(date: Date, message: String)  = {
  println(date + "----" + message)
 }
 ```
+
+上述代码中logWith只需提供参数`message`（部分参数函数）
 
 ### 高阶函数
 
@@ -141,7 +153,6 @@ def main(args: Array[String]): Unit = {
 返回值为函数
 
 ```scala
-  
 def f(function2: (Int, Int) => Int): (Int, Int) => Int = {  
   function2  
 }  
@@ -157,7 +168,7 @@ def main(args: Array[String]): Unit = {
 ```
 
 ```scala
-def f1(): ()=>Unit = {  
+def f1(): () => Unit = {  
   def f2(): Unit = {  
     println("调用f2")  
   }  
