--- a/分布式并行运算/MapReduce案例/二次排序.md
+++ b/分布式并行运算/MapReduce案例/二次排序.md
@@ -1,4 +1,6 @@
 
+# 二次排序
+
 ## 准备
 
 创建文件，数据如下：
@@ -149,4 +151,4 @@ public class SecondarySort {
 
 ## 结果
 
-![](../../markdown_img/Pasted%20image%2020220908111224.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220908111224.png)
