--- a/分布式并行运算/MapReduce案例/学生平均成绩.md
+++ b/分布式并行运算/MapReduce案例/学生平均成绩.md
@@ -1,10 +1,17 @@
+# 学生平均成绩
+
+## 准备
+
 学生不同科目在不同文件夹，统计平均成绩，输出到新的文件中
 
 成绩格式
+
 ```txt
 张三   89
 李四   90
 ```
+
+## 代码
 
 ```java
 import java.io.IOException;  
@@ -96,7 +103,8 @@ public class Score {
 ```
 
 
-需要输出日志，则将`/opt/hadoop-2.9.2/etc/hadoop/log4j.properties`文件放到项目的`/src/main/java/resources`目录下，再配置`pom.xml`文件即可
+需要输出日志，则将`/opt/hadoop-2.9.2/etc/hadoop/log4j.properties`文件放到项目的`/src/main/java/resources`目录下，再配置`pom.xml`文件即可（记得配置pom.xml）
+
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>  
 <project xmlns="http://maven.apache.org/POM/4.0.0"  
