--- a/分布式并行运算/MapReduce案例/统计单词，按文件分.md
+++ b/分布式并行运算/MapReduce案例/统计单词，按文件分.md
@@ -1,10 +1,13 @@
-输出
+# 统计单词，按文件分
+
+## 输出
 
 ```txt
 haddop file1.txt:1-file2.txt:2-file3.txt:5
 java file1.txt:1-file2.txt:4-file3.txt:5
 ```
 
+## 代码
 
 ```java
 import java.io.IOException;  
@@ -125,10 +128,10 @@ public class reIndex {
 
 数据先经过map处理成`{"WORD:FILE" : 1}` 的形式，然后经过combine 统计单词数并将键值对设置为`{"WORD" : "FILE:COUNT"}`的形式，最后在reduce中将值合并
 
-![](../../markdown_img/H[}8QT`2[ARNPG66T@APIF0.png)
+![](http://www.droliz.cn/markdown_img/H[}8QT`2[ARNPG66T@APIF0.png)
 
 ![](../../markdown_img/R}~GO$`4~RYR125$]P%K82X%201.png)
-![](../../markdown_img/XPTM1M}HQF$33DFB3G1KGH1%201.png)
+![](http://www.droliz.cn/markdown_img/XPTM1M}HQF$33DFB3G1KGH1%201.png)
 
 ### 获取文件路径的操作
 
