--- a/分布式并行运算/MapReduce案例/统计文件单词频率.md
+++ b/分布式并行运算/MapReduce案例/统计文件单词频率.md
@@ -1,10 +1,13 @@
-单词格式
+# 统计文件单词频率
+
+## 单词格式
 
 ```txt
 aaa,bbb,ccc,dddw
 asdas,dads,dada
 ```
 
+## 代码
 
 ```java
 import org.apache.hadoop.io.IntWritable;  
@@ -92,24 +95,24 @@ public class WordCount {
 
 ## 打包
 
-![](../../markdown_img/Pasted%20image%2020220901110229.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110229.png)
 
 先运行 `clear` 在运行`package`，会在根目录生成`target`目录，jar包在此目录下
 
 或者`文件->项目结构`
 
-![](../../markdown_img/Pasted%20image%2020220901110344.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110344.png)
 
 添加工件
-![](../../markdown_img/Pasted%20image%2020220901110359.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110359.png)
 
 选择主类
-![](../../markdown_img/Pasted%20image%2020220901110415.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110415.png)
 
 构建
-![](../../markdown_img/Pasted%20image%2020220901110500.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110500.png)
 
-![](../../markdown_img/Pasted%20image%2020220901110508.png)
+![](http://www.droliz.cn/markdown_img/Pasted%20image%2020220901110508.png)
 
 在根目录的`out->artifacts->MR_02_jar`下生成jar包
 
