--- a/安装配置/伪分布式的安装配置.md
+++ b/安装配置/伪分布式的安装配置.md
@@ -5,6 +5,7 @@ zhihu-url: https://zhuanlan.zhihu.com/p/491426016
 ---
 
 # 伪分布式的安装配置
+
 ## 前提准备
 
 ### openVPN（内网需要）
@@ -21,7 +22,7 @@ zhihu-url: https://zhuanlan.zhihu.com/p/491426016
 ### 配置环境变量
 * 通过如下命令配置jdk
 
-```
+```sh
 # 进入编辑文件
 vi /etc/profile
 
@@ -38,7 +39,7 @@ export PATH=${HADOOP_HOME}/bin:${HADOOP_HOME}/sbin:$PATH
 ```
 
 使配置文件生效
-```
+```sh
 source /etc/profile
 ```
 
@@ -49,7 +50,7 @@ hadoop的配置文件在`/opt/hadoop2.9.0/etc/hadoop/`目录下
 
 配置JAVA环境变量
 
-```
+```sh
 JAVA_HOME=${JAVA_HOME}
 ```
 
@@ -62,18 +63,18 @@ vi core-site.xml
 # ipaddr是主机的ip地址（自行更改）
 # 在<configuration>标签中添加
 <property>
-        <name>fs.default.name</name>
-        <value>hdfs://ipaddr:9000</value>
+	<name>fs.default.name</name>
+	<value>hdfs://ipaddr:9000</value>
 </property> 
 
 <property>
-        <name>fs.defaultFS</name>
-        <value>hdfs://ipaddr:9000</value>
+	<name>fs.defaultFS</name>
+	<value>hdfs://ipaddr:9000</value>
  </property>
  <!-- 存储文件的路径 -->
 <property>
-        <name>hadoop.tmp.dir</name>
-        <value>/home/hadooptmp</value>
+	<name>hadoop.tmp.dir</name>
+	<value>/home/hadooptmp</value>
  </property> 
 ```
 
@@ -84,16 +85,16 @@ vi hdfs-site.xml
 
 # 在<configuration>标签下
 <property>
-        <name>dfs.replication</name>
-        <value>1</value>
- </property>
+	<name>dfs.replication</name>
+	<value>1</value>
+</property>
 <property>
-        <name>dfs.name.dir</name>
-        <value>/home/hadoopname</value>
- </property>
+	<name>dfs.name.dir</name>
+	<value>/home/hadoopname</value>
+</property>
 <property>
-        <name>dfs.data.dir</name>
-        <value>/home/hadoopdata</value>
+	<name>dfs.data.dir</name>
+	<value>/home/hadoopdata</value>
  </property>
 ```
 
@@ -104,8 +105,8 @@ mv mapred-site.xml.template mapred-site.xml
 vi mapred-site.xml
 #添加以下内容：
 <property>
-        <name>mapreduce.framework.name</name>
-        <value>yarn</value>
+	<name>mapreduce.framework.name</name>
+	<value>yarn</value>
 </property> 
 ```
 
@@ -126,7 +127,7 @@ vi yarn-site.xml
 
 ### 设置免密登录
 
-```
+```sh
 # 进入root
 cd /root
 # 一般使没有.ssh目录的，需要自己登录一次
@@ -141,7 +142,7 @@ ssh master
 
 ### 开始初始化
 
-```
+```sh
 # 在以下文件中输入如下命令
 cd /opt/hadoop-2.9.2/etc/hadoop/
 # 格式化
@@ -167,6 +168,5 @@ hadoop fs -ls /         # 此时显示有test目录
 * 方法一：命令行下输入 jps 回车，显示6个进程
 * 方法二： 
 * start-all.cmd   启动hadoop成功后，有2个web访问界面能成功访问，下面IP替换为自己的master实验虚拟机的IP
-    * http://192.168.230.12:50070  50070端口节点文件管理界面： 可查看节点(3)，文件(7-1)
-    * http://192.168.230.12:8088/     8088端口yarn资源管理界面
-
+    * `master:50070`  50070端口节点文件管理界面： 可查看节点(3)，文件(7-1)
+    * `master:8088/`     8088端口yarn资源管理界面
