--- a/算法/动态规划/下降路径最小和.md
+++ b/算法/动态规划/下降路径最小和.md
@@ -7,10 +7,14 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457954659
 # 下降路径最小和
 [Leetcode: 1289.下降路径最小和](https://leetcode-cn.com/problems/minimum-falling-path-sum-ii/)
 
-初始化一个同grid的二维列表，用于记录达到每个点的最小的和\
-由于第一行没有任何路径故：初始化`dp[0] = grid[0]`\
-从第一行开始后面的每一行的路径都是上一行不在这一列的值中最小的加上这一点的值\
-递推公式:\
+初始化一个同grid的二维列表，用于记录达到每个点的最小的和
+
+由于第一行没有任何路径故：初始化`dp[0] = grid[0]`
+
+从第一行开始后面的每一行的路径都是上一行不在这一列的值中最小的加上这一点的值
+
+递推公式:
+
 ` dp[i][j] = min(dp[i-1][:j] + dp[i-1][j+1:]) + grid[i][j]`
 
 ```python
