--- a/算法/动态规划/回文子串.md
+++ b/算法/动态规划/回文子串.md
@@ -18,8 +18,10 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457955625
 | 3     |       |       |       |   T   |   F   |
 | 4     |       |       |       |       |   T   |
 
-决定由 row 到 line 是否是回文子串是由 row + 1 到 line - 1 是否是回文和 `s[row] == line[line]`共同决定的\
+决定由 row 到 line 是否是回文子串是由 row + 1 到 line - 1 是否是回文和 `s[row] == line[line]`共同决定的
+
 在满足`s[row] == line[line]`情况下，如果回文串长度小于3，那么一定是回文子串，否则要判断内层是否是回文子串
+
 ```python
 class Solution:
     def countSubstrings(self, s: str) -> int:
