--- a/算法/动态规划/斐波那契数列.md
+++ b/算法/动态规划/斐波那契数列.md
@@ -5,7 +5,9 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457953462
 ---
 
 # 斐波那契数列
-初始为[1, 1, ······]\
+
+初始为[1, 1, ······] 
+
 递推公式：`dp[i] = d[i-1] + dp[i-2]`
 
 ```python
