--- a/算法/动态规划/最小路径和.md
+++ b/算法/动态规划/最小路径和.md
@@ -7,13 +7,20 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457956278
 # 剑指Offer 99.最小路径和
 [Leetcode: 剑指Offer 99.最小路径和](https://leetcode-cn.com/problems/0i0mDW/)
 
-与下降路径最小和相似，初始化数组\
-下一步路径只能向右或者向下，那么每一个位置的路径和只能由上边来，或者左边\
-由此递推公式：\
-`grid[i][j] = min(grid[i-1][j], grid[i][j-1]) + grid[i][j]`\
-第一列的位置只能由上一行得来，故\
+与下降路径最小和相似，初始化数组
+
+下一步路径只能向右或者向下，那么每一个位置的路径和只能由上边来，或者左边
+
+由此递推公式：
+
+`grid[i][j] = min(grid[i-1][j], grid[i][j-1]) + grid[i][j]`
+
+第一列的位置只能由上一行得来，故
+
 `grid[i][0] += grid[i-1][0] + grid[i][0]`
-第一行的位置只能由左边数据得来，故\
+
+第一行的位置只能由左边数据得来，故
+
 `grid[0][j] = grid[0][j-1] + grid[0][j]`
 
 ```python
