--- a/算法/动态规划/最长回文字符串.md
+++ b/算法/动态规划/最长回文字符串.md
@@ -13,13 +13,19 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457561097
 | 3     |       |       |       |   t   | f    |
 | 4     |       |       |       |       | t    |
 
-只用更改右上部分\
-True 代表 s[row][line]是回文子串\
-用begin记录子串起始位置 row 用max_l记录长度\
-由于每一个回文串[row][line]\
-都是由[row+1][line-1]两边加上相同值即s[row] == s[line]\
-line-1+1 - (row+1) < 2 即不构成区间，没有意义
-```
+只用更改右上部分
+
+True 代表 s`[row][line]`是回文子串
+
+用begin记录子串起始位置 row 用max_l记录长度
+
+由于每一个回文串`[row][line]`
+
+都是由`[row+1][line-1]`两边加上相同值即s`[row] == s[line]`
+
+`line-1+1 - (row+1) < 2` 即不构成区间，没有意义
+
+```python
 class Solution:
     def longestPalindrome(self, s: str) -> str:        
         # 初始化一个 l x l 的二维数组
