--- a/算法/动态规划/零钱兑换.md
+++ b/算法/动态规划/零钱兑换.md
@@ -5,11 +5,17 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457857763
 ---
 
 # 零钱兑换
-dp[i] 表示当零钱为 i 时的最少找钱个数\
-那么对于任意金额的零钱 i 
-他的最小个数一定是从 1 - i 中取最小值 + 1\
-这个最小值时的金额一定在 coins 中\
+
+dp[i] 表示当零钱为 i 时的最少找钱个数
+
+那么对于任意金额的零钱 i
+
+他的最小个数一定是从 1 - i 中取最小值 + 1
+
+这个最小值时的金额一定在 coins 中
+
 递推公式：`dp[i] = min(dp[i - coins[j]]) + 1`
+
 ```python
 class Solution:
     def coinChange(self, coins: list[int], amount: int) -> int:
