--- a/算法/递归/生成括号.md
+++ b/算法/递归/生成括号.md
@@ -5,12 +5,17 @@ zhihu-url: https://zhuanlan.zhihu.com/p/457544027
 ---
 
 
-## 生成括号
+# 生成括号
+
+## 分析
+
 如果要生成 n 对括号，那么左右括号个数一定相同，left = right = n\
 一定是优先放 "（" 才能放 "）"\
 也就是说 left > right 时才能开始放右括号
 当 left == right < n 那么此时下一个一定是放 ")"  
->代码
+
+## 代码
+
 ```python
 class Solution:
     def generateParenthesis(self, n: int) -> List[str]:
