--- a/算法/动态规划/统计元音字母序列的数目.md
+++ b/算法/动态规划/统计元音字母序列的数目.md
@@ -7,20 +7,31 @@ zhihu-url: https://zhuanlan.zhihu.com/p/458255028
 # 统计元音字母序列的数目
 [Leetcode: 1220.统计元音字母序列的数目](https://leetcode-cn.com/problems/count-vowels-permutation/)
 
-很容易就能想到所有的数目其实就是结尾不同的元音字母数目之和\
-那么就很容易知道递推公式：\
-下一行的a前面只能是 e、i、u:\
-`dp[i][0] = dp[i-1][1] + dp[i-1][2] + dp[i-1][4]`\
+很容易就能想到所有的数目其实就是结尾不同的元音字母数目之和
+
+那么就很容易知道递推公式：
+
+下一行的a前面只能是 e、i、u:
+
+`dp[i][0] = dp[i-1][1] + dp[i-1][2] + dp[i-1][4]`
+
 下一行的e前面只能是 a、i:\
-`dp[i][1] = dp[i-1][0] + dp[i-1][2]`\
-下一行的i前面只能是 e、o、:\
-`dp[i][2] = dp[i-1][1] + dp[i-1][3]`\
-下一行的o前面只能是 i:\
-`dp[i][3] = dp[i-1][2]`\
-下一行的u前面只能是 i、o:\
+`dp[i][1] = dp[i-1][0] + dp[i-1][2]`
+
+下一行的i前面只能是 e、o、:
+
+`dp[i][2] = dp[i-1][1] + dp[i-1][3]`
+
+下一行的o前面只能是 i:
+
+`dp[i][3] = dp[i-1][2]`
+
+下一行的u前面只能是 i、o:
+
 `dp[i][4] = dp[i-1][2] + dp[i-1][3]`
 
 最后的数目就是`sum(dp[n]) % 1000000007`
+
 ```python
 class Solution:
     def countVowelPermutation(self, n: int) -> int:
