--- a/WEB/CSS样式/毛玻璃样式.md
+++ b/WEB/CSS样式/毛玻璃样式.md
@@ -4,3 +4,39 @@
 
 ## backdrop-filter
 
+`backfrop-filter`属性可以让效果作用在该元素的下一层元素**这一块区域**，元素本身不会有效果
+
+`filter`属性是直接将效果作用于该元素（包括子元素）
+
+```css
+<div class="body">  
+  <div class="content">  
+  </div>  
+</div>
+
+.body {  
+  width: 100vw;  
+  height: 100vh;  
+  background-image: url("../../assets/image/login_bg_snow.jpg");  /* 背景图 */
+  background-repeat: no-repeat;  
+  background-attachment: fixed;  
+  background-size: cover;  
+}  
+  
+.content {  
+  display: flex;  
+  justify-content: center;  
+  flex-direction: column;  
+  position: absolute;  
+  backdrop-filter: blur(10px);   /* 将这个元素覆盖的区域下方进行模糊  */  
+  -webkit-backdrop-filter: blur(10px);  
+  /*filter: blur(10px);   !* 将这个元素模糊 *!*/  
+  top: 50%;  
+  left: 50%;  
+  height: 400px;  
+  width: 400px;  
+  letter-spacing: 0.5em;   /* 字符间的空白 */  
+  transform: translate(-50%, -50%);  
+  border-radius: 40px;  
+  box-shadow: 0 0 30px 10px rgba(0, 0, 0, .3);  
+}```
