--- a/前端项目实战/CRM系统/项目类.md
+++ b/前端项目实战/CRM系统/项目类.md
@@ -1126,3 +1126,456 @@ public class NoLoginInterceptor extends HandlerInterceptorAdapter {
     }  
 }
 ```
+
+## 查询参数类
+
+新建软件包 `com.xxxx.crm/query`，添加查询类
+
+`CusDevPlanQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class CusDevPlanQuery extends BaseQuery {  
+  
+    private Integer saleChanceId; // 营销机会的主键  
+  
+    public Integer getSaleChanceId() {  
+        return saleChanceId;  
+    }  
+  
+    public void setSaleChanceId(Integer saleChanceId) {  
+        this.saleChanceId = saleChanceId;  
+    }  
+}
+```
+
+`CustomerLossQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class CustomerLossQuery extends BaseQuery {  
+  
+    private String customerNo; // 客户编号  
+    private String customerName; // 客户名称  
+    private Integer state; // 流失状态  0=暂缓流失状态  1=确认流失状态  
+  
+    public String getCustomerNo() {  
+        return customerNo;  
+    }  
+  
+    public void setCustomerNo(String customerNo) {  
+        this.customerNo = customerNo;  
+    }  
+  
+    public String getCustomerName() {  
+        return customerName;  
+    }  
+  
+    public void setCustomerName(String customerName) {  
+        this.customerName = customerName;  
+    }  
+  
+    public Integer getState() {  
+        return state;  
+    }  
+  
+    public void setState(Integer state) {  
+        this.state = state;  
+    }  
+}
+```
+
+`CustomerOrderQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class CustomerOrderQuery extends BaseQuery {  
+  
+    private Integer cusId;  // 客户ID  
+  
+    public Integer getCusId() {  
+        return cusId;  
+    }  
+  
+    public void setCusId(Integer cusId) {  
+        this.cusId = cusId;  
+    }  
+}
+```
+
+`CustomerQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class CustomerQuery extends BaseQuery {  
+  
+    private String customerName; // 客户名称  
+    private String customerNo; // 客户编号  
+    private String level; // 客户级别  
+  
+    private String time; // 订单时间  
+    private Integer type; // 金额区间  1=1-1000 2=1000-3000  3=3000-5000  4=5000以上  
+  
+    public String getTime() {  
+        return time;  
+    }  
+  
+    public void setTime(String time) {  
+        this.time = time;  
+    }  
+  
+    public Integer getType() {  
+        return type;  
+    }  
+  
+    public void setType(Integer type) {  
+        this.type = type;  
+    }  
+  
+    public String getCustomerName() {  
+        return customerName;  
+    }  
+  
+    public void setCustomerName(String customerName) {  
+        this.customerName = customerName;  
+    }  
+  
+    public String getCustomerNo() {  
+        return customerNo;  
+    }  
+  
+    public void setCustomerNo(String customerNo) {  
+        this.customerNo = customerNo;  
+    }  
+  
+    public String getLevel() {  
+        return level;  
+    }  
+  
+    public void setLevel(String level) {  
+        this.level = level;  
+    }  
+}
+```
+
+`CustomerReprieveQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class CustomerReprieveQuery extends BaseQuery {  
+  
+    // 流失客户ID  
+    private Integer lossId;  
+  
+    public Integer getLossId() {  
+        return lossId;  
+    }  
+  
+    public void setLossId(Integer lossId) {  
+        this.lossId = lossId;  
+    }  
+}
+```
+
+`CustomerServeQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+  
+public class CustomerServeQuery extends BaseQuery {  
+  
+    private String customer; // 客户名称  
+    private Integer serveType; // 服务类型  
+    private String state; // 服务状态  服务创建=fw_001  服务分配=fw_002  服务处理=fw_003  服务反馈=fw_004  服务归档=fw_005  
+  
+    private Integer assigner; // 分配人  
+  
+    public Integer getAssigner() {  
+        return assigner;  
+    }  
+  
+    public void setAssigner(Integer assigner) {  
+        this.assigner = assigner;  
+    }  
+  
+    public String getCustomer() {  
+        return customer;  
+    }  
+  
+    public void setCustomer(String customer) {  
+        this.customer = customer;  
+    }  
+  
+    public Integer getServeType() {  
+        return serveType;  
+    }  
+  
+    public void setServeType(Integer serveType) {  
+        this.serveType = serveType;  
+    }  
+  
+    public String getState() {  
+        return state;  
+    }  
+  
+    public void setState(String state) {  
+        this.state = state;  
+    }  
+}
+```
+
+`OrderDetailsQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class OrderDetailsQuery extends BaseQuery {  
+  
+    private Integer orderId; // 订单ID  
+  
+    public Integer getOrderId() {  
+        return orderId;  
+    }  
+  
+    public void setOrderId(Integer orderId) {  
+        this.orderId = orderId;  
+    }  
+}
+```
+
+`RoleQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class RoleQuery extends BaseQuery {  
+  
+    private String roleName; // 角色名称  
+  
+    public String getRoleName() {  
+        return roleName;  
+    }  
+  
+    public void setRoleName(String roleName) {  
+        this.roleName = roleName;  
+    }  
+}
+```
+
+`SaleChanceQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+public class SaleChanceQuery extends BaseQuery {  
+  
+    // 分页参数  
+  
+    // 营销机会管理 条件查询  
+    private String customerName; // 客户名  
+    private String createMan; // 创建人  
+    private Integer state; // 分配状态  0=未分配 1=已分配  
+  
+    // 客户开发计划 条件查询  
+    private String devResult; // 开发状态  
+    private Integer assignMan; // 指派人  
+  
+  
+    public String getCustomerName() {  
+        return customerName;  
+    }  
+  
+    public void setCustomerName(String customerName) {  
+        this.customerName = customerName;  
+    }  
+  
+    public String getCreateMan() {  
+        return createMan;  
+    }  
+  
+    public void setCreateMan(String createMan) {  
+        this.createMan = createMan;  
+    }  
+  
+    public Integer getState() {  
+        return state;  
+    }  
+  
+    public void setState(Integer state) {  
+        this.state = state;  
+    }  
+  
+    public String getDevResult() {  
+        return devResult;  
+    }  
+  
+    public void setDevResult(String devResult) {  
+        this.devResult = devResult;  
+    }  
+  
+    public Integer getAssignMan() {  
+        return assignMan;  
+    }  
+  
+    public void setAssignMan(Integer assignMan) {  
+        this.assignMan = assignMan;  
+    }  
+}
+```
+
+`UserQuery`
+
+```java
+package com.xxxx.crm.query;  
+  
+import com.xxxx.crm.base.BaseQuery;  
+  
+public class UserQuery extends BaseQuery {  
+  
+    private String userName; // 用户名  
+    private String email; // 邮箱  
+    private String phone; // 手机号  
+  
+    public String getUserName() {  
+        return userName;  
+    }  
+  
+    public void setUserName(String userName) {  
+        this.userName = userName;  
+    }  
+  
+    public String getEmail() {  
+        return email;  
+    }  
+  
+    public void setEmail(String email) {  
+        this.email = email;  
+    }  
+  
+    public String getPhone() {  
+        return phone;  
+    }  
+  
+    public void setPhone(String phone) {  
+        this.phone = phone;  
+    }  
+}
+```
+
+
+## 枚举类
+
+
+新建软件包 `com.xxxx.crm.enums`，枚举类
+
+`CustomerServeStatus`
+
+```java
+package com.xxxx.crm.enums;  
+  
+/**  
+ * * 客户服务状态枚举类  
+ */  
+public enum  CustomerServeStatus {  
+    // 创建  
+    CREATED("fw_001"),  
+    // 分配  
+    ASSIGNED("fw_002"),  
+    // 处理  
+    PROCED("fw_003"),  
+    // 反馈  
+    FEED_BACK("fw_004"),  
+    // 归档  
+    ARCHIVED("fw_005");  
+  
+    private String state;  
+  
+    CustomerServeStatus(String state) {  
+        this.state = state;  
+    }  
+  
+    public String getState() {  
+        return state;  
+    }  
+}
+```
+
+
+`DevResult`
+
+```java
+package com.xxxx.crm.enums;  
+
+/**  
+ * 开发状态枚举类  
+ */  
+public enum  DevResult {  
+    // 未开发  
+    UNDEV(0),  
+    // 开发中  
+    DEVING(1),  
+    // 开发成功  
+    DEV_SUCCESS(2),  
+    // 开发失败  
+    DEV_FAILED(3);  
+  
+    private  Integer status;  
+  
+    DevResult(Integer status) {  
+        this.status = status;  
+    }  
+  
+    public Integer getStatus() {  
+        return status;  
+    }  
+}
+```
+
+`StateStatus`
+
+```java
+package com.xxxx.crm.enums;  
+  
+/**  
+ * 分配状态枚举类  
+ */  
+public enum StateStatus {  
+    // 未分配  
+    UNSTATE(0),  
+    // 已分配  
+    STATED(1);  
+  
+    private Integer type;  
+  
+    StateStatus(Integer type) {  
+        this.type = type;  
+    }  
+  
+    public Integer getType() {  
+        return type;  
+    }  
+}
+```
