--- a/大数据/大数据/spark/示例/单词计数.md
+++ b/大数据/大数据/spark/示例/单词计数.md
@@ -44,7 +44,8 @@ import org.apache.spark.{SparkConf, SparkContext}
   
 object WordCount {  
   def main(args: Array[String]): Unit = {  
-    // 1、建立和 spark 框架的连接   类似 jdbc    val sparkConf = new SparkConf().setMaster("local").setAppName("WordCount")  
+    // 1、建立和 spark 框架的连接   类似 jdbc    
+    val sparkConf = new SparkConf().setMaster("local").setAppName("WordCount")  
     val sc = new SparkContext(sparkConf)  
   
     val lines = sc.textFile("data/WordCount/")   // : RDD[String]  
