--- a/前端项目实战/CRM系统/项目类.md
+++ b/前端项目实战/CRM系统/项目类.md
@@ -1579,3 +1579,93 @@ public enum StateStatus {
     }  
 }
 ```
+
+## 自定义注解类
+
+新建软件包 `com.xxxx.crm.annoation`，注解类
+
+`RequiredPermission`
+
+```java
+package com.xxxx.crm.annoation;  
+  
+import java.lang.annotation.*;  
+  
+/**  
+ * 定义方法需要的对应资源的权限码  
+ */  
+@Target({ElementType.METHOD})  
+@Retention(RetentionPolicy.RUNTIME)  
+@Documented  
+public @interface RequiredPermission {  
+    // 权限码  
+    String code() default "";  
+}
+```
+
+## 切面拦截注解
+
+新建软件包 `com.xxxx.crm.aspect`，切面类
+
+`PermissionProxy`
+
+```java
+package com.xxxx.crm.aspect;  
+  
+import com.xxxx.crm.annoation.RequiredPermission;  
+import com.xxxx.crm.exceptions.AuthException;  
+import org.aspectj.lang.ProceedingJoinPoint;  
+import org.aspectj.lang.annotation.Around;  
+import org.aspectj.lang.annotation.Aspect;  
+import org.aspectj.lang.reflect.MethodSignature;  
+import org.springframework.stereotype.Component;  
+  
+import javax.annotation.Resource;  
+import javax.servlet.http.HttpSession;  
+import java.util.List;  
+  
+/**  
+ * 切面  
+ */  
+  
+@Component  
+@Aspect  
+public class PermissionProxy {  
+  
+    @Resource  
+    private HttpSession session;  
+  
+    /**  
+     * 切面会拦截指定包下的指定注解  
+     *  拦截com.xxxx.crm.annoation的RequiredPermission注解  
+     *  
+     * @param pjp  
+     * @return java.lang.Object  
+     */    
+    @Around(value = "@annotation(com.xxxx.crm.annoation.RequiredPermission)")  
+    public Object around(ProceedingJoinPoint pjp) throws Throwable {  
+        Object result = null;  
+        // 得到当前登录用户拥有的权限 （session作用域）  
+        List<String> permissions = (List<String>) session.getAttribute("permissions");  
+        // 判断用户是否拥有权限  
+        if (null == permissions || permissions.size() < 1) {  
+            // 抛出认证异常  
+            throw  new AuthException();  
+        }  
+  
+        // 得到对应的目标  
+        MethodSignature methodSignature = (MethodSignature) pjp.getSignature();  
+        // 得到方法上的注解  
+        RequiredPermission requiredPermission = methodSignature.getMethod().getDeclaredAnnotation(RequiredPermission.class);  
+        // 判断注解上对应的状态码  
+        if (!(permissions.contains(requiredPermission.code()))) {  
+            // 如果权限中不包含当前方法上注解指定的权限码，则抛出异常  
+            throw new AuthException();  
+        }  
+  
+        result = pjp.proceed();  
+        return result;  
+    }  
+  
+}
+```
